--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -835,17 +835,19 @@
     "inputs": [
       {
         "name": "board",
-        "type": "List[List[str]]",
-        "strategy": "2d_list",
+        "type": "List[List[digit]]",
+        "strategy": "list",
         "preprocess": "make_board",
-        "n_rows": 30,
-        "n_cols": 30,
+        "n_rows": 9,
+        "n_cols": 9,
         "dataset": "MNIST",
         "unstructured_input_type": "List[List[Tensor[1 x 28 x 28]]]"
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown",
+      "fallback": 0
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
