finally implementing some MNIST Video things

--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -1297,20 +1297,23 @@
     "dataset_size_train": 5000,
     "dataset_size_test": 500
   },
-  "mnist_video": {
-    "py_func": "mnist_video",
+  "mnist_video_identity": {
+    "py_func": "mnist_video_identity",
     "inputs": [
       {
-        "name": "video",
-        "type": "List[digit]",
-        "strategy": "list",
+        "name": "x",
+        "type": "Video[digit]",
+        "strategy": "singleton",
         "preprocess": "id",
+        "length": 20,
         "dataset": "MNIST_VIDEO",
         "unstructured_input_type": "List[Tensor[1 x 28 x 28]]"
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown",
+      "fallback": 0
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
