--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -176,7 +176,9 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown",
+      "fallback": 0
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
